# Apartment-Finder-for-NYC

NYC_Scraper/nyc_apartments/: .env.example  README.md  pyproject.toml  requirements.txt
NYC_Scraper/nyc_apartments/src/nyc_apartments/: __init__.py  aggregator.py  cli.py  config.py  filters.py  formatters.py  geo.py  http_client.py  models.py
NYC_Scraper/nyc_apartments/src/nyc_apartments.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
NYC_Scraper/nyc_apartments/src/nyc_apartments/providers/: __init__.py  base.py  nyc_open_data_hny_buildings.py  rentcast_rental_listings.py
NYC_Scraper/nyc_apartments/src/nyc_apartments/storage/: __init__.py  json_store.py  sqlite_store.py
